# natanhp.github.io

./: .gitignore  200.html  CMakeLists.txt  CNAME  Dockerfile  astro.config.mjs  blog.cpp  conanfile.txt  index.html  manifest.json  package.json  pnpm-lock.yaml  precache-manifest.067a1f7c4da6479b85ed35ff646b7774.js  precache-manifest.f4d6a219293ed38abacf1b9ccffdebd4.js  runner.sh  service-worker.js  sw.js  tailwind.config.mjs  tsconfig.json
.astro/: content-assets.mjs  content-modules.mjs  data-store.json  settings.json
About-Me-Website/: index.html
Kouve-Petshop-Android-Doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
Kouvee-Petshop-Desktop-Doc/: allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
Kouvee-Petshop-Frontend/: index.html
_nuxt/: 1cf8f8f.js  27c198d.js  2f2655e.js  3295c1c.js  4592b3b.js  733f527.js  7d2a298.js  7ee7706.js  87c82c6.js  8fd6821.js  9dde0b4.js  abdb26f.js  b2efcfa.js  c26e928.js  c2810b7.js  c331dad.js  d5c76d4.js  d64f9d1.js  f3d5981.js  fcf73fc.js  manifest.bbc7ac98.json  manifest.c244b23c.json
css/: about.aa1c4169.css
inspire/: index.html
js/: about.53239d63.js  (+11 more)
source/: CMakeLists.txt  about.cpp  about.h  blog.cpp  blog.h  main.cpp  profile.cpp  profile.h  util.cpp  util.h
(+583 files in other folders)
