SET(WT_PROJECT_SOURCE
        main.cpp
        blog.cpp blog.h)


SET(WT_PROJECT_TARGET natanhpid.wt)

ADD_EXECUTABLE(${WT_PROJECT_TARGET} ${WT_PROJECT_SOURCE})

TARGET_LINK_LIBRARIES(${WT_PROJECT_TARGET} ${WT_CONNECTOR} wt)

INCLUDE_DIRECTORIES(/usr/local/include/Wt)

ADD_CUSTOM_COMMAND(TARGET ${WT_PROJECT_TARGET} PRE_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_SOURCE_DIR}/resources $<TARGET_FILE_DIR:${WT_PROJECT_TARGET}>/resources)